--- a/package.json
+++ b/package.json
@@ -10,11 +10,21 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.0.11",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
     "@sanity/client": "^6.11.1",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.24.1",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.4.0",
     "clsx": "^2.1.0",
+    "firebase-tools": "^13.16.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.309.0",
     "mongoose": "^8.0.1",
